--- a/styling/header.css
+++ b/styling/header.css
@@ -3,6 +3,9 @@ header {
   align-items: center;
   height: 5.6rem;
   background: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 #menu-icon {
@@ -25,26 +28,29 @@ header {
 
 .searchbar {
   display: flex;
-  border: 1px lightgray solid;
-  border-radius: 3px;
-  width: 63rem;
   margin-left: 2rem;
 }
 .searchbar__input {
-  width: 56rem;
+  width: 55rem;
   font-size: 1.6rem;
   color: #757575;
   padding: 1rem;
   margin: 0 0;
   border: 0.5px lightgray solid;
-  border-radius: 1px 0 0 1px;
+  border-radius: 3px 0 0 3px;
+  outline: none;
+}
+.searchbar__input:focus {
+  border: 0.5px #2b6aba solid;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 .searchbar__btn {
   width: 6.5rem;
   margin: 0 0;
   padding: 0;
   border: 0.5px lightgray solid;
-  border-radius: 0 1px 1px 0;
+  border-left: none;
+  border-radius: 0 3px 3px 0;
   background-color: #f8f8f8;
 }
 .searchbar__btn img {
