--- a/styling/header.scss
+++ b/styling/header.scss
@@ -7,6 +7,9 @@ header {
     align-items: center;
     height: 5.6rem;
     background: white;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 
 #menu-icon {
@@ -29,20 +32,22 @@ header {
 
 .searchbar {
     display: flex;
-    border: 1px $grey-light solid;
-    border-radius: 3px;
-    width: 63rem;
     margin-left: 2rem;
     
-    
     &__input {
-        width: 56rem;
+        width: 55rem;
         font-size: 1.6rem;
         color: $grey-dark;
         padding: 1rem;
         margin: 0 0;
         border: 0.5px $grey-light  solid;
-        border-radius: 1px 0 0 1px;
+        border-radius: 3px 0 0 3px;
+        outline: none;
+
+        &:focus {
+            border:  0.5px rgb(43, 106, 186) solid;
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+        }
     }
 
     &__btn {
@@ -51,7 +56,8 @@ header {
         padding: 0;
 
         border: 0.5px $grey-light  solid;
-        border-radius: 0 1px 1px 0;
+        border-left: none;
+        border-radius: 0 3px 3px 0;
         background-color: rgb(248, 248, 248);
     
         img {
