--- a/styling/sidebar.css
+++ b/styling/sidebar.css
@@ -66,6 +66,7 @@
   height: 1.4rem;
   background: #e3e3e3;
   border-radius: 1rem;
+  z-index: -1;
 }
 .autoplay-toggle label::after {
   content: "";
