--- a/styling/sidebar.scss
+++ b/styling/sidebar.scss
@@ -76,6 +76,7 @@
         height: 1.4rem;
         background: rgb(227, 227, 227);
         border-radius: 1rem;
+        z-index: -1;
     }
  
     label::after {
